Fix malformed CSS: properly apply list-style-position: inside on mobile
The previous sed command inserted a literal \n instead of a newline,
creating an invalid CSS declaration on one line.

--- a/templates/shared/web.css
+++ b/templates/shared/web.css
@@ -612,7 +612,8 @@ body[class*="template-"] .base-heading-link svg {
 
     body[class*="template-"] ul,
     body[class*="template-"] ol {
-        padding-left: 1rem;\n        list-style-position: inside;
+        padding-left: 1rem;
+        list-style-position: inside;
     }
 
     body[class*="template-"] .base-doc-sitename {
